examples/test/testpolicy3057.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3057
  namespace: namespace494
spec:
  podSelector:
    matchLabels:
      key15: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value27
          key10: value42
          key45: value1
      podSelector:
        matchLabels:
          key23: value18
